--- a/content/posts/2022-01-02-devlogs-2022-1.md
+++ b/content/posts/2022-01-02-devlogs-2022-1.md
@@ -1,10 +1,10 @@
 ---
-title: "Devlogs: 2022, week 52-1"
+title: "Devlogs: 2022, week 52-3"
 date: 2022-01-02T23:26:20+01:00
 series: ["devlogs"]
 ---
 
-## 02.01.2021
+## 02.01.2022
 
 ### Genesis
 
@@ -23,3 +23,11 @@ Unlike hard-coding these, though, it does present a bit of extra overhead. Looku
 Annoyingly, this blocks continued work on chunks, because I need to be able to reference textures before I can do anything. I'm also starting to feel like an entity factory might be a good idea.
 
 This is definitely a refactorable area though; for now, I'll roll with string identifiers. They're not used much anyway, so it should be fine for the near foreseeable future, and works a lot better, in my semi-biased opinion.
+
+## 20.01.22
+
+### lunarwatcher.github.io
+
+Decided to set up the GitHub Action to automatically wipe the previous deployment history to reduce repo size. All the history is already contained in the source repo, but with infinitely less noise from when I inevitably make a _tiny_ change to a core template, and a number of files need massive changes in the diff of the produced output.
+
+Nothing is lost, there's less redundant (and honestly useless in this case) data stored, everyone wins.
