--- a/content/posts/2022-01-02-devlogs-2022-1.md
+++ b/content/posts/2022-01-02-devlogs-2022-1.md
@@ -31,3 +31,9 @@ This is definitely a refactorable area though; for now, I'll roll with string id
 Decided to set up the GitHub Action to automatically wipe the previous deployment history to reduce repo size. All the history is already contained in the source repo, but with infinitely less noise from when I inevitably make a _tiny_ change to a core template, and a number of files need massive changes in the diff of the produced output.
 
 Nothing is lost, there's less redundant (and honestly useless in this case) data stored, everyone wins.
+
+## 25.01.22
+
+### Genesis
+
+Finished refactoring the texture atlas to make it run on a string-based system. Should be possible to deal with metadata integration from here, as well as potential atlas merger, but this isn't a problem for the near foreseeable future, so deferring to future me.
