--- a/content/posts/2022-01-02-devlogs-2022-1.md
+++ b/content/posts/2022-01-02-devlogs-2022-1.md
@@ -37,3 +37,7 @@ Nothing is lost, there's less redundant (and honestly useless in this case) data
 ### Genesis
 
 Finished refactoring the texture atlas to make it run on a string-based system. Should be possible to deal with metadata integration from here, as well as potential atlas merger, but this isn't a problem for the near foreseeable future, so deferring to future me.
+
+## 20.02.22-21.02.22
+
+Vim recently made changes to Vim9, and broke the previous autoload syntax. Patched two broken plugins (Pandora and Amber), and caught a bug in Pandora where `[text](//example.com)`-links weren't followed.
