--- a/content/posts/2022-01-02-devlogs-2022-1.md
+++ b/content/posts/2022-01-02-devlogs-2022-1.md
@@ -41,3 +41,37 @@ Finished refactoring the texture atlas to make it run on a string-based system. 
 ## 20.02.22-21.02.22
 
 Vim recently made changes to Vim9, and broke the previous autoload syntax. Patched two broken plugins (Pandora and Amber), and caught a bug in Pandora where `[text](//example.com)`-links weren't followed.
+
+## 01.04.22-04.04.22
+
+Started getting back into Acacia, after an embarassingly long round of procrastination. Grammar compiling is now up and running, but it's not particularly solid.
+
+It's incompatible with Windows because Windows is trash. The implementation is also essentially hacking in a form of makefile, because apparently, none of the grammars ship with any form of build system. I'm strongly considering hacking together a CMake script, possibly as a template, and just drop it into whatever directory is being installed. Doing that would make compatibility a lot easier to work with.
+
+On the bright side, it seems that tree-sitter-cli isn't necessary. I have no clue why nvim invokes `tree-sitter generate`, and I honestly don't care for now. It's not required for compiling, so I assume it's version compat? Definitely kicking that can down the road.
+
+I'm also not sure how I want to keep track of parsers. Explicitly requiring matches feels like a hack, and even the current system is only compatible with official grammars. Not really sure how I want to deal with the balance of static and dynamic content. Or rather, I'm not sure how I plan to deal with dynamic parser installation on top of static installation. For instance, assuming some custom function that doesn't currently exist:
+
+```vimscript
+import autoload 'acacia'
+
+acacia.Install([
+    "cpp",
+    "vim",
+    ...
+])
+```
+
+The above shouldn't prevent `:TSInstall some-nth-language`, but it also shouldn't require it to be installed.
+
+Admittedly, this style also requires update caching beyond what currently exists, and that's _definitely_ a can to kick down the road.
+
+Also read a comment by Bram on a GitHub issue saying he was going to look into tree-sitter after Vim9 is done. Not sure what happens to this project when that happens, but my plan is to maintain compatibility with whatever tree-sitter API Vim adds. If I go about this right, I should be able to set it up in a way where I can maintain the server as a polyfill for earlier versions of Vim. Admittedly, the extent of the backwards compat is going to be limited, because the entire thing is built on Vim 9. It's not like Vim 8.1 or certain early patches of Vim 8.2 is going to be able to run it anyway. But that's fine; no matter what happens, tree-sitter is _many_ patches, and possibly a year or two away, and that assumes Bram decides in favor of tree-sitter. If he doesn't, I guess I'll have the only fully functional tree-sitter implementation :p
+
+---
+
+Also got side-tracked into a different form of journaling, which is largely just more extensive notekeeping. https://jrnl.sh seems like a potential candidate, but I'm not sure. Feels far too general, to the extent where it more or less conflicts with my bullet journal. Vimwiki is fairly relevant for it, but it's not a great format. [The curiosity journal](https://shop.answerinprogress.com/collections/version-zero/products/copy-of-curiosity_journal_v1) does get close, but it's far too pure research-oriented. I feel like [Obsidian](https://obsidian.md/) is roughly what I want, but /shrug. It strikes the balance between visuals and functionality, but I have no idea if it'll work out in practice. A combination of a date-based and a data-based system is really what I'm looking for, so paper isn't viable here.
+
+We'll see what I figure out there. Optimally, I'd have a Vim-based solution, but I'm not sure if I'm ready to open pandora's box on that ([Pun not intended](//github.com/lunarwatcher/pandora)), particularly while I'm in the middle of acacia. The benefit with obsidian in that regard, is that it's fully markdown. I can replicate some core features in Vim, either as a part of Pandora, or as a separate plugin, and just have it work. 
+
+What I do know is this; there's far too many options and missing variables for me to figure this out any time soon.
