--- a/content/posts/2022-04-09-devlog-2.md
+++ b/content/posts/2022-04-09-devlog-2.md
@@ -2,6 +2,7 @@
 title: "Devlog #2"
 date: 2022-04-03T22:58:27+02:00
 series: ["devlogs"]
+slug: devlog-2
 ---
 
 I've once again revised the format of my devlogs. Instead of using a single post that I edit, I'm going to publish individual posts for some range of time:tm:. What that range of time is, is going vary. Some times it could be a week, while other times, it could be a month. In either case, I hope this is easier to follow.
