Fucking tag completion

--- a/content/posts/2022-08-06-devlog-5.md
+++ b/content/posts/2022-08-06-devlog-5.md
@@ -37,7 +37,7 @@ Lua 5.4 has been an interesting journey. A lot of time has gone into it, and I s
 
 ## Webdev
 
-Lua 5.4 being a nightmare to get started with spawned an article series, with the first and currently [only article]({{<ref path="/posts/2022-08-02-lua-54-introduction.md"></ref>}}) consisting of 5.6k words. I overboard with that, but hey, here we are. While I'm not entirely sure about the factual accuracy of the article, it ensures two things:
+Lua 5.4 being a nightmare to get started with spawned an article series, with the first and currently [only article]({{<ref path="/posts/2022-08-02-lua-54-introduction.md">}}) consisting of 5.6k words. I overboard with that, but hey, here we are. While I'm not entirely sure about the factual accuracy of the article, it ensures two things:
 
 1. There are things that are accurate, and consequently should be able to help other people not suffer as much as I did, trying to patch together outdated documentation with brand new, incompatible functions.
 2. [Duty calls](https://xkcd.com/386/); if/when I'm wrong, and if the series gets any attention from anyone deeper in the C API than me, odds are solid I'll get corrections. As I said in the initial post, I'm planning to write erratas for each article if needed, in addition to just correcting the post.
