--- a/content/posts/2022-08-17-devlog-6.md
+++ b/content/posts/2022-08-17-devlog-6.md
@@ -1,5 +1,5 @@
 ---
-title: Devlog 6: lots of behind the scenes work
+title: "Devlog 6: lots of behind the scenes work"
 date: 2022-08-17T21:12:22+02:00
 series: ["devlogs"]
 slug: devlog-6
